--- a/06-Code/ViveresPedroSystem V2/src/ec/edu/espe/codeproject/view/FrmCustomer.form
+++ b/06-Code/ViveresPedroSystem V2/src/ec/edu/espe/codeproject/view/FrmCustomer.form
@@ -146,6 +146,9 @@
             <Property name="toolTipText" type="java.lang.String" value="Here you must enter your Cedula"/>
             <Property name="name" type="java.lang.String" value="" noResource="true"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtIdActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtName">
           <Properties>
@@ -229,9 +232,12 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnSearch">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Search"/>
+            <Property name="text" type="java.lang.String" value="Return"/>
             <Property name="toolTipText" type="java.lang.String" value="You can search the customer based on the id"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSearchActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
