--- a/06-Code/ViveresPedroSystem V2/src/ec/edu/espe/codeproject/view/FrmCashier.form
+++ b/06-Code/ViveresPedroSystem V2/src/ec/edu/espe/codeproject/view/FrmCashier.form
@@ -54,7 +54,7 @@
                               <Component id="txtName" min="-2" pref="135" max="-2" attributes="0"/>
                               <Component id="txtID" min="-2" pref="135" max="-2" attributes="0"/>
                               <Component id="txtAddress" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
-                              <Component id="intCell" alignment="0" min="-2" pref="111" max="-2" attributes="0"/>
+                              <Component id="txtCellPhone" alignment="0" min="-2" pref="111" max="-2" attributes="0"/>
                               <Component id="txtEmail" min="-2" pref="216" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -99,7 +99,7 @@
                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="intCell" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtCellPhone" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -155,6 +155,9 @@
           <Properties>
             <Property name="toolTipText" type="java.lang.String" value="Enter you Cedula"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtIDActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtName">
           <Properties>
@@ -165,8 +168,14 @@
           <Properties>
             <Property name="toolTipText" type="java.lang.String" value="Enter your address with streets"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtAddressActionPerformed"/>
+          </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="intCell">
+        <Component class="javax.swing.JTextField" name="txtCellPhone">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCellPhoneActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtEmail">
           <Properties>
