--- a/06-Code/ViveresPedroSystem/src/ec/edu/espe/codeproject/view/FrmDeleteCashier.form
+++ b/06-Code/ViveresPedroSystem/src/ec/edu/espe/codeproject/view/FrmDeleteCashier.form
@@ -36,7 +36,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="f6" green="97" red="f4" type="rgb"/>
+          <Color blue="d4" green="9d" red="d3" type="rgb"/>
         </Property>
       </Properties>
 
