--- a/06-Code/ViveresPedroSystem/src/ec/edu/espe/codeproject/view/FrmTCashier.form
+++ b/06-Code/ViveresPedroSystem/src/ec/edu/espe/codeproject/view/FrmTCashier.form
@@ -59,7 +59,7 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="bf" green="b1" red="f7" type="rgb"/>
+              <Color blue="d4" green="9d" red="d3" type="rgb"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
