--- a/06-Code/ViveresPedroSystem/src/ec/edu/espe/codeproject/view/FrmCashier.form
+++ b/06-Code/ViveresPedroSystem/src/ec/edu/espe/codeproject/view/FrmCashier.form
@@ -280,7 +280,7 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblIDError">
+        <Component class="javax.swing.JLabel" name="IblIDError">
           <Properties>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="66" green="66" red="ff" type="rgb"/>
