--- a/06-Code/ViveresPedroSystem/src/ec/edu/espe/codeproject/view/FrmMenu.form
+++ b/06-Code/ViveresPedroSystem/src/ec/edu/espe/codeproject/view/FrmMenu.form
@@ -154,15 +154,13 @@
             <Property name="text" type="java.lang.String" value="Inventory"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Search Product"/>
-              </Properties>
-            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem8">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Add Product"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem8ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
